# linxu_lvgl_display

./: .gitmodules  README.md  build.sh
Application/P001_D21x_basic_demo/: CMakeLists.txt  README.md  lv_conf.h  main.c
Application/P001_D21x_basic_demo/lib/: driver_backends.c
Application/P001_D21x_basic_demo/lib/display_backends/: glfw3.c  x11.c
Application/P001_D21x_basic_demo/lib/indev_backends/: evdev.c
Application/P001_D21x_basic_demo/scripts/: backend_conf.sh  common_config.cmake
Application/P001_basic_demo/scripts/: common_config.cmake
Application/P002_T113-i_basic_demo/: P001_D21x_basic_demo  P002_T113-i_basic_demo
components/: README.md
libs/D21x/: README.md
scripts/: build_scripts.sh  env_setup.sh  help.sh  utils.sh
source/drivers/: README.md
tools/: README.md
